--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -26,12 +26,11 @@
 	box-shadow: inset 0 1px 0 rgba(255,255,255,0.05)
 }
 
-#downloads span {
+#downloads :where(span) {
     opacity: 0.6;
     background: 0 0 no-repeat;
-	display: inline-block;
 	width: 16px;
 	height: 16px;
-	margin: 1px 8px 0 0;
 	float: left;
 }
+
