--- a/univasset/scripts/pageheader/header.css
+++ b/univasset/scripts/pageheader/header.css
@@ -26,9 +26,10 @@
 	box-shadow: inset 0 1px 0 rgba(255,255,255,0.05)
 }
 
-#downloads :where(span) {
+#downloads span {
     opacity: 0.6;
-    background: 0 0 no-repeat;
+	background-repeat: no-repeat;
+	background-position: 0 0;
 	width: 16px;
 	height: 16px;
 	float: left;
