--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -29,9 +29,10 @@ img.inline-img {
     height: 1rem;
 }
 
-a{
+a {
 	color:#63c0f5;
-	text-shadow:0 0 5px rgba(104,182,255,0.5)
+	text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+	cursor: pointer;
 }
 
 a[href^="#"] {
