--- a/PNC/faqs/index.css
+++ b/PNC/faqs/index.css
@@ -1,4 +1,5 @@
 @import "../../univasset/scripts/externalcss.css";
+@import "../../univasset/scripts/tabs.css";
 
 /* #region Tabs */
 .tab-button > label {
