--- a/EXI/faqs/index.css
+++ b/EXI/faqs/index.css
@@ -3,6 +3,12 @@
 @import "../../univasset/scripts/externalcss.css";
 @import "../../univasset/scripts/tabs.css";
 
+/* temp */
+#Tags input[type="text"] {
+    display: none;
+}
+
+
 /* #region Tabs */
 .tab-button > label {
     background-color: transparent;
