--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -1,6 +1,8 @@
 @import "../externalcss.css";
 @import "../tabs.css";
 
+@import "./nonest.css";
+
 input[type="checkbox"], input[type="radio"] {
     appearance: none;
     margin: 0px;
