--- a/PNC/unitdata/index.css
+++ b/PNC/unitdata/index.css
@@ -2,7 +2,7 @@
 
 .func_table {
     height: fit-content;
-    max-height: 95vh;
+    max-height: 95lvh;
 }
 
 /* #region Filter */
@@ -23,7 +23,7 @@ input[type="checkbox"] {
 }
 
 input[type="text"] {
-    width: calc(100% - 60px);
+    width: calc(100% - 58px);
 }
 /* #endregion */
 
