--- a/PNC/unitstats/index.css
+++ b/PNC/unitstats/index.css
@@ -1,4 +1,5 @@
 @import "/univasset/scripts/externalcss.css";
+@import "../../univasset/scripts/tooltip.css";
 
 .func_table {
     height: fit-content;
