--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -2,7 +2,6 @@
 @import "./pageheader/header.css";
 
 @import "./htmlgenerator/htmlgenerator.css";
-@import "./html/index.css";
 
 code {
 	background: rgba(0, 0, 0, 0.9);
@@ -25,6 +24,10 @@ tr:nth-child(even) {
 a {
 	color: rgb(99, 192, 245);
 	text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+
+	/* &[href^="#"] {
+		text-decoration: none;
+	} */
 }
 
 a[href^="#"] {
@@ -35,6 +38,16 @@ figcaption {
 	font-size: 0.5rem;
 	text-align: center;
 }
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: normal;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	color: #b5e853;
+	letter-spacing: -0.03em;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
+	margin: 0 0 20px;
+}
+
 
 
 
@@ -147,10 +160,6 @@ section{
 	margin:0 0 20px 0
 }
 
-h1,h2,h3,h4,h5,h6{
-	margin:0 0 20px
-}
-
 li{
 	line-height:1.4
 }
@@ -197,14 +206,6 @@ header h2{
 
 section img{
 	max-width:100%
-}
-
-h1,h2,h3,h4,h5,h6{
-	font-weight:normal;
-	font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-	color:#b5e853;
-	letter-spacing:-0.03em;
-	text-shadow:0 1px 1px rgba(0,0,0,0.1),0 0 5px rgba(181,232,83,0.1),0 0 10px rgba(181,232,83,0.1)
 }
 
 #main_content h1{
