--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -1,6 +1,7 @@
 @import "../externalcss.css";
 @import "../tooltip.css";
 @import "../tabs.css";
+@import "../html/index.css";
 
 @import "./nonest.css";
 
