--- a/GFL/index.css
+++ b/GFL/index.css
@@ -1,4 +1,5 @@
-@import "../univasset/scripts/externalcss.css";
+@import "/univasset/scripts/externalcss.css";
+@import "/univasset/scripts/tooltip.css";
 
 #links {
     display: grid;
