--- a/PNC/unitdata/index.css
+++ b/PNC/unitdata/index.css
@@ -1,4 +1,5 @@
-@import "/univasset/scripts/externalcss.css";
+@import "/maincss.css";
+@import "/univasset/scripts/table.css";
 
 .func_table {
     height: fit-content;
@@ -28,7 +29,7 @@ input[type="text"] {
 /* #endregion */
 
 /* #region Freeze */
-.freeze-row.freeze-row th {
+.freeze-row th {
     background: #1b1b1b;
 }
 
@@ -36,11 +37,11 @@ input[type="text"] {
     border-right: 1px dashed #b5e853;
 }
 
-.freeze-col tr:nth-child(odd) > :first-child {
+.freeze-col tbody > tr:nth-child(odd) > td:first-child {
     background: #1b1b1b;
 }
 
-.freeze-col tr:nth-child(even) > :first-child {
+.freeze-col tbody > tr:nth-child(even) > td:first-child {
     background: #292f20;
 }
 /* #endregion */
