--- a/PNC/index.css
+++ b/PNC/index.css
@@ -27,6 +27,7 @@
     font-size: min(8cqw, 50px);
     -webkit-text-stroke: 1px white;
     color: black;
+    text-align: center;
 }
 
 .func_timer > span:first-of-type {
