--- a/main.css
+++ b/main.css
@@ -4,6 +4,16 @@
 @import "./univasset/scripts/pageheader/header.css" layer(link-header);
 
 @layer generic {
+	body {
+		margin: 0;
+		padding: 0;
+		background: #151515 url("../images/bkg.png") 0 0;
+		color: #eaeaea;
+		font-size: 16px;
+		line-height: 1.5;
+		font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	}
+
 	code {
 		background: rgba(0, 0, 0, 0.9);
 		border: 1px solid rgba(255, 255, 255, 0.15);
@@ -16,10 +26,6 @@
 	dd {
 		display: list-item;
 		margin-inline-start: 20px;
-	}
-	
-	tr:nth-child(even) {
-		background-color: rgba(85, 107, 47, 0.25);
 	}
 	
 	a {
@@ -43,6 +49,15 @@
 		letter-spacing: -0.03em;
 		text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 		margin: 0 0 20px;
+	}
+
+	table{
+		width: 100%;
+		margin: 0 0 20px 0;
+	}
+
+	tr:nth-child(even) {
+		background-color: rgba(85, 107, 47, 0.25);
 	}
 }
 
@@ -133,15 +148,6 @@
 		color:#90a959
 	}
 
-	body{
-		margin:0;
-		padding:0;
-		background:#151515 url("../images/bkg.png") 0 0;
-		color:#eaeaea;
-		font-size:16px;
-		line-height:1.5;
-		font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace
-	}
 		
 	.container{
 		width:90%;
@@ -256,12 +262,6 @@
 		word-wrap:normal;
 		overflow:auto;
 		overflow-y:hidden
-	}
-
-
-	table{
-		width:100%;
-		margin:0 0 20px 0
 	}
 
 	th{
