--- a/univasset/scripts/html/index.css
+++ b/univasset/scripts/html/index.css
@@ -1,6 +1,9 @@
 @import "./textstyle.css";
 
 /* #region Google Document */
+div.embed-google > select {
+    max-width: calc(100% - 60px);
+}
 div.embed-google > select:disabled {
     opacity: 1;
     color: initial;
