--- a/main.css
+++ b/main.css
@@ -27,16 +27,7 @@
 		display: list-item;
 		margin-inline-start: 20px;
 	}
-	
-	a {
-		color: rgb(99, 192, 245);
-		text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
-	
-		&[href^="#"] {
-			text-decoration: none;
-		}
-	}
-		
+
 	figcaption {
 		font-size: 0.5rem;
 		text-align: center;
@@ -44,13 +35,30 @@
 	
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: normal;
-		font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 		color: #b5e853;
 		letter-spacing: -0.03em;
 		text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 		margin: 0 0 20px;
 	}
 
+	details > summary {
+		cursor: pointer;
+		color: rgb(233, 161, 152);
+		text-shadow: 0 0 5px rgba(238, 151, 162, 0.5);
+	}	
+
+	/* #region Anchor */
+	a {
+		color: rgb(99, 192, 245);
+		text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+	}
+	
+	a[href^="#"] {
+		text-decoration: none;
+	}
+	/* #endregion */
+
+	/* #region Table */
 	table{
 		width: 100%;
 		margin: 0 0 20px 0;
@@ -59,6 +67,7 @@
 	tr:nth-child(even) {
 		background-color: rgba(85, 107, 47, 0.25);
 	}
+	/* #endregion */
 }
 
 @layer special {
@@ -162,41 +171,6 @@
 
 	li{
 		line-height:1.4
-	}
-
-	header{
-		background:rgba(0,0,0,0.1);
-		width:100%;
-		border-bottom:1px dashed #b5e853;
-		padding:20px 0;
-		margin:0 0 40px 0
-	}
-
-	header h1{
-		font-size:30px;
-		line-height:1.5;margin:0 0 0 -40px;
-		font-weight:bold;
-		font-family:Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-		color:#b5e853;
-		text-shadow:0 1px 1px rgba(0,0,0,0.1),0 0 5px rgba(181,232,83,0.1),0 0 10px rgba(181,232,83,0.1);
-		letter-spacing:-1px;-webkit-font-smoothing:antialiased
-	}
-
-	@media (max-width: 1000px){
-		header h1{
-			margin-left:0
-		}
-	}
-
-	header h1:before{
-		content:"./ ";
-		font-size:24px
-	}
-
-	header h2{
-		font-size:18px;
-		font-weight:300;
-		color:#666
 	}
 
 	#main_content{
