--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -1,4 +1,4 @@
-@import "../externalcss.css";
+@import "/main.css";
 @import "../tooltip.css";
 @import "../tabs.css";
 @import "../html/index.css";
@@ -109,15 +109,8 @@ fieldset {
 }
 
 /* #region Details and Summary */
-details {
+details, details > summary {
     display: inline;
-}
-
-details summary {
-    cursor: pointer;
-    display: inline;
-    color: rgb(233, 161, 152);
-    text-shadow: 0 0 5px rgba(238, 151, 162, 0.5);
 }
 
 details[open] {
@@ -127,7 +120,7 @@ details[open] {
     padding: 5px;
 }
 
-details[open] summary {
+details[open] > summary {
     text-align: center;
     display: block;
 }
