--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 /* @import "/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9"; */
-@layer generic, special, link-header;
+@layer pseudo-agent, special, link-header;
 
-@import "./univasset/scripts/pageheader/header.css" layer(link-header);
+@import "/univasset/scripts/pageheader/header.css" layer(link-header);
 
-@layer generic {
+@layer pseudo-agent {
 	body {
 		margin: 0;
 		padding: 0;
@@ -32,6 +32,12 @@
 		font-size: 0.5rem;
 		text-align: center;
 	}
+
+	blockquote {
+		color: #aaa;
+		padding-left: 10px;
+		border-left: 1px dotted #666;
+	}
 	
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: normal;
@@ -59,7 +65,7 @@
 	/* #endregion */
 
 	/* #region Table */
-	table{
+	table {
 		width: 100%;
 		margin: 0 0 20px 0;
 	}
@@ -72,199 +78,200 @@
 
 @layer special {
 	.highlight {
-		color:#d0d0d0
+		color: #d0d0d0;
 	}
 
 	.highlight table td {
-		padding:5px
+		padding: 5px;
 	}
 
 	.highlight table pre {
-		margin:0
+		margin: 0;
 	}
 
 	.highlight .w {
-		color:#d0d0d0
+		color: #d0d0d0;
 	}
 
 	.highlight .err {
-		color:#151515;
-		background-color:#ac4142
+		color: #151515;
+		background-color: #ac4142;
 	}
 
-	.highlight .c,.highlight .cd,.highlight .cm,.highlight .c1,.highlight .cs {
-		color:#888
+	.highlight :is(.c, .cd, .cm, .c1, .cs) {
+		color: #888;
 	}
 
 	.highlight .cp {
-		color:#f4bf75
+		color: #f4bf75;
 	}
 
-	.highlight .o,.highlight .ow {
-		color:#f4bf75
+	.highlight :is(.o, .ow) {
+		color: #f4bf75;
 	}
 
-	.highlight .p,.highlight .pi {
-		color:#d0d0d0
+	.highlight :is(.p, .pi) {
+		color: #d0d0d0;
 	}
 
 	.highlight .gi {
-		color:#90a959
+		color: #90a959;
 	}
 
 	.highlight .gd {
-		color:#ac4142
+		color: #ac4142;
 	}
 
-	.highlight .gh{
-		color:#6a9fb5;
-		font-weight:bold
+	.highlight .gh {
+		color: #6a9fb5;
+		font-weight: bold;
 	}
 
-	.highlight .k,.highlight .kn,.highlight .kp,.highlight .kr,.highlight .kv{
-		color:#aa759f
+	.highlight :is(.k, .kn, .kp, .kr, .kv) {
+		color: #aa759f;
 	}
 
-	.highlight .kc,.highlight .kt,.highlight .kd{
-		color:#d28445
+	.highlight :is(.kc, .kt, .kd) {
+		color: #d28445;
 	}
 
-	.highlight .s,.highlight .sb,.highlight .sc,.highlight .sd,.highlight .s2,.highlight .sh,.highlight .sx,.highlight .s1{
-		color:#90a959
+	.highlight :is(.s, .sb, .sc, .sd, .s2, .sh, .sx, .s1 ) {
+		color: #90a959;
 	}
 
-	.highlight .sr{
-		color:#75b5aa
+	.highlight .sr {
+		color: #75b5aa;
 	}
 
-	.highlight .si,.highlight .se{
-		color:#8f5536
+	.highlight :is(.si, .se) {
+		color: #8f5536;
 	}
 
-	.highlight .nt,.highlight .nn,.highlight .nc,.highlight .no{
-		color:#f4bf75
+	.highlight :is(.nt, .nn, .nc, .no) {
+		color: #f4bf75;
 	}
 
-	.highlight .na{
-		color:#6a9fb5
+	.highlight .na {
+		color: #6a9fb5;
 	}
 
-	.highlight .m,.highlight .mf,.highlight .mh,.highlight .mi,.highlight .il,.highlight .mo,.highlight .mb,.highlight .mx{
-		color:#90a959
+	.highlight :is(.m, .mf, .mh, .mi, .il, .mo, .mb, .mx) {
+		color: #90a959;
 	}
 
-	.highlight .ss{
-		color:#90a959
-	}
-
-		
-	.container{
-		width:90%;
-		max-width:1000px;
-		margin:0 auto
+	.highlight .ss {
+		color: #90a959;
 	}
 		
-	section{
-		display:block;
-		margin:0 0 20px 0
+	.container {
+		width: 90%;
+		max-width: 1000px;
+		margin: 0 auto;
+	}
+		
+	section {
+		display: block;
+		margin: 0 0 20px 0;
 	}
 
-	li{
-		line-height:1.4
+	li {
+		line-height: 1.4;
 	}
 
-	#main_content{
-		width:100%;
-		-webkit-font-smoothing:antialiased
+	#main_content {
+		width: 100%;
+		-webkit-font-smoothing: antialiased;
 	}
 
-	section img{
-		max-width:100%
+	section img {
+		max-width: 100%;
 	}
 
-	#main_content h1{
-		font-size:30px
+	#main_content h1 {
+		font-size: 30px;
 	}
 
-	#main_content h2{
-		font-size:24px
+	#main_content h2 {
+		font-size: 24px;
 	}
 
-	#main_content h3{
-		font-size:18px
+	#main_content h3 {
+		font-size: 18px;
 	}
 
-	#main_content h4{
-		font-size:14px
+	#main_content h4 {
+		font-size: 14px;
 	}
 
-	#main_content h5{
-		font-size:12px;
-		text-transform:uppercase;
-		margin:0 0 5px 0
+	#main_content h5 {
+		font-size: 12px;
+		text-transform: uppercase;
+		margin: 0 0 5px 0;
 	}
 
-	#main_content h6{
-		font-size:12px;
-		text-transform:uppercase;
-		color:#999;
-		margin:0 0 5px 0
+	#main_content h6 {
+		font-size: 12px;
+		text-transform: uppercase;
+		color: #999;
+		margin: 0 0 5px 0;
 	}
 
-	dt{
-		font-style:italic;
-		font-weight:bold
+	dt {
+		font-style: italic;
+		font-weight: bold;
 	}
 
-	ul li{
-		list-style-image:url("../images/bullet.png")
+	ul li {
+		list-style-image: url("/assets/css/images/bullet.png");
 	}
 
-	blockquote{
-		color:#aaa;
-		padding-left:10px;
-		border-left:1px dotted #666
+	pre {
+		background: rgba(0, 0, 0, 0.9);
+		border: 1px solid rgba(255, 255, 255, 0.15);
+		padding: 10px;
+		font-size: 16px;
+		color: #b5e853;
+		border-radius: 2px;
+		word-wrap: normal;
+		overflow: auto;
+		overflow-y: hidden;
 	}
 
-	pre{
-		background:rgba(0,0,0,0.9);
-		border:1px solid rgba(255,255,255,0.15);
-		padding:10px;
-		font-size:16px;
-		color:#b5e853;
-		border-radius:2px;
-		word-wrap:normal;
-		overflow:auto;
-		overflow-y:hidden
+	th {
+		text-align: left;
+		border-bottom: 1px dashed #b5e853;
+		padding: 5px 10px;
 	}
 
-	th{
-		text-align:left;
-		border-bottom:1px dashed #b5e853;
-		padding:5px 10px
+	td {
+		padding: 5px 10px;
 	}
 
-	td{
-		padding:5px 10px
+	hr {
+		height: 0;
+		border: 0;
+		border-bottom: 1px dashed #b5e853;
+		color: #b5e853;
 	}
 
-	hr{
-		height:0;
-		border:0;
-		border-bottom:1px dashed #b5e853;
-		color:#b5e853
+	.cf {
+		zoom: 1;
+
+		&:before {
+			content: "";
+			display: table;
+		}
+
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
 	}
 
-	.cf:before,.cf:after{
-		content:"";
-		display:table
-	}
-
-	.cf:after{
-		clear:both
-	}
-
-	.cf{
-		zoom:1
+	.center {
+		left: 50%;
+		position: relative;
+		transform: translateX(-50%);
 	}
 }
