--- a/PNC/unitstats/algorithms.css
+++ b/PNC/unitstats/algorithms.css
@@ -209,6 +209,10 @@ dialog {
     grid-area: effect;
     height: 100%;
     overflow-y: auto;
+    /* overscroll-behavior: contain; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /* #endregion */
 
