--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 /* @import "/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9"; */
-@layer pseudo-agent, special, link-header;
+@layer pseudo-agent, classes, special, link-header;
 
 @import "/univasset/scripts/pageheader/header.css" layer(link-header);
 
 @layer pseudo-agent {
+	/* #region Body */
 	body {
 		margin: 0;
 		padding: 0;
@@ -12,7 +13,19 @@
 		font-size: 16px;
 		line-height: 1.5;
 		font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+		/* scrollbar-gutter: stable both-edges; */
 	}
+
+	body:has(:modal) {
+		overflow: hidden;	/* overscroll-behavior: contain; not needed */
+	}
+
+	@media (pointer: fine) {	/* For PC (devices with visible scrollbar). */
+		body:has(:modal) {
+			padding-right: 16px;
+		}
+	}
+	/* #endregion */
 
 	code {
 		background: rgba(0, 0, 0, 0.9);
@@ -74,6 +87,10 @@
 		background-color: rgba(85, 107, 47, 0.25);
 	}
 	/* #endregion */
+}
+
+@layer classes {
+	
 }
 
 @layer special {
@@ -188,90 +205,91 @@
 		position: relative;
 		transform: translateX(-50%);
 	}
+
+	.highlight {
+		color: #d0d0d0;
+	
+		& table td {
+			padding: 5px;
+		}
+	
+		& table pre {
+			margin: 0;
+		}
+	
+		& .w {
+			color: #d0d0d0;
+		}
+	
+		& .err {
+			color: #151515;
+			background-color: #ac4142;
+		}
+	
+		& :is(.c, .cd, .cm, .c1, .cs) {
+			color: #888;
+		}
+	
+		& .cp {
+			color: #f4bf75;
+		}
+	
+		& :is(.o, .ow) {
+			color: #f4bf75;
+		}
+	
+		& :is(.p, .pi) {
+			color: #d0d0d0;
+		}
+	
+		& .gi {
+			color: #90a959;
+		}
+	
+		& .gd {
+			color: #ac4142;
+		}
+	
+		& .gh {
+			color: #6a9fb5;
+			font-weight: bold;
+		}
+	
+		& :is(.k, .kn, .kp, .kr, .kv) {
+			color: #aa759f;
+		}
+	
+		& :is(.kc, .kt, .kd) {
+			color: #d28445;
+		}
+	
+		& :is(.s, .sb, .sc, .sd, .s2, .sh, .sx, .s1 ) {
+			color: #90a959;
+		}
+	
+		& .sr {
+			color: #75b5aa;
+		}
+	
+		& :is(.si, .se) {
+			color: #8f5536;
+		}
+	
+		& :is(.nt, .nn, .nc, .no) {
+			color: #f4bf75;
+		}
+	
+		& .na {
+			color: #6a9fb5;
+		}
+	
+		& :is(.m, .mf, .mh, .mi, .il, .mo, .mb, .mx) {
+			color: #90a959;
+		}
+	
+		& .ss {
+			color: #90a959;
+		}
+	}
 }
 
-.highlight {
-	color: #d0d0d0;
-
-	& table td {
-		padding: 5px;
-	}
-
-	& table pre {
-		margin: 0;
-	}
-
-	& .w {
-		color: #d0d0d0;
-	}
-
-	& .err {
-		color: #151515;
-		background-color: #ac4142;
-	}
-
-	& :is(.c, .cd, .cm, .c1, .cs) {
-		color: #888;
-	}
-
-	& .cp {
-		color: #f4bf75;
-	}
-
-	& :is(.o, .ow) {
-		color: #f4bf75;
-	}
-
-	& :is(.p, .pi) {
-		color: #d0d0d0;
-	}
-
-	& .gi {
-		color: #90a959;
-	}
-
-	& .gd {
-		color: #ac4142;
-	}
-
-	& .gh {
-		color: #6a9fb5;
-		font-weight: bold;
-	}
-
-	& :is(.k, .kn, .kp, .kr, .kv) {
-		color: #aa759f;
-	}
-
-	& :is(.kc, .kt, .kd) {
-		color: #d28445;
-	}
-
-	& :is(.s, .sb, .sc, .sd, .s2, .sh, .sx, .s1 ) {
-		color: #90a959;
-	}
-
-	& .sr {
-		color: #75b5aa;
-	}
-
-	& :is(.si, .se) {
-		color: #8f5536;
-	}
-
-	& :is(.nt, .nn, .nc, .no) {
-		color: #f4bf75;
-	}
-
-	& .na {
-		color: #6a9fb5;
-	}
-
-	& :is(.m, .mf, .mh, .mi, .il, .mo, .mb, .mx) {
-		color: #90a959;
-	}
-
-	& .ss {
-		color: #90a959;
-	}
-}
