--- a/univasset/scripts/tooltip.css
+++ b/univasset/scripts/tooltip.css
@@ -1,43 +1,60 @@
-:has(> .tooltiptext) {
-    position: relative;
-}
+/* .tooltip + .tooltiptext used for non-clickable tooltips. Replace with pointer-events: none */
+/* .tooltip > .tooltiptext for interactible tooltips. Use a class instead. */
 
 .tooltiptext {
-    position: absolute;
-    min-width: fit-content;
-    width: 30vw;
-    max-width: 300px;
-    left: 50%;
-    transform: translateX(-50%);
-
     padding: 3px;
     background-color: #555;
     color: #fff;
     text-align: center;
-    border-radius: 8px;
     z-index: 1;
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s;
-}
-
-@media (hover: none) {
-    .tooltiptext {
-        position: fixed;
-        max-width: 500px;
-        width: 100%;
-        height: fit-content;
-        top: 0;
-    }
+    /* pointer-events: none; */
 }
 
 @media (hover: hover) {
+    :has(> .tooltiptext) {
+        position: relative;
+    }
+
+    .tooltiptext {
+        position: absolute;
+
+        min-width: fit-content;
+        width: 25vw;
+        max-width: 300px;
+
+        left: 50%;
+        transform: translateX(-50%);
+
+        border-radius: 8px;
+    }
+
     .tooltip + .tooltiptext {
         bottom: 50%;
     }
     
     .tooltip > .tooltiptext {
         bottom: 100%;
+    }
+}
+
+@media (hover: none) {
+    .tooltiptext {
+        position: fixed;
+
+        width: 90%;
+        max-width: 500px;
+        min-height: 2lh;
+
+        top: 0;
+
+        border-radius: 0 0 20px 20px;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;	
     }
 }
 
