--- a/PNC/unitstats/algorithms.css
+++ b/PNC/unitstats/algorithms.css
@@ -134,11 +134,11 @@ dialog {
 }
 /* #endregion */
 
-#algo-modal option[class*="algo-stat"] {
+/* #algo-modal option[class*="algo-stat"] {
     background-position: right;
     background-repeat: no-repeat;
     background-size: contain;
-}
+} */
 
 /* #algo-modal .mainstat .algo-stat-good {
     background-image: url("../assets/images/algorithms/up2.png");
@@ -151,11 +151,6 @@ dialog {
 #algo-modal .algo-stat-bad {
     background-image: url("../assets/images/algorithms/down1.png");
 } */
-
-#algo-modal > #close-modal {
-    left: 50%;
-    transform: translateX(-50%);
-}
 /* #endregion */
 
 /* Algo Select */
