--- a/univasset/scripts/faqs/index.css
+++ b/univasset/scripts/faqs/index.css
@@ -72,6 +72,10 @@ dl, table, blockquote, figure {
         background: aqua;
         color: black;
     }
+
+    & > .tooltiptext {
+        bottom: 110%;
+    }
 }
 
 fieldset {
