--- a/univasset/scripts/faqs/nonest.css
+++ b/univasset/scripts/faqs/nonest.css
@@ -29,6 +29,10 @@
     color: black;
 }
 
+.tags > .tooltiptext {
+    bottom: 110%;
+}
+
 /* Staples */
 fieldset > legend > h3 {
     margin: 0px;
